components/test-component-yubm/base/.tekton/build-webhook-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    appstudio.openshift.io/application: test-app-eoji
    appstudio.openshift.io/component: test-component-yubm
    build.appstudio.openshift.io/build: "true"
    build.appstudio.openshift.io/type: build
    build.appstudio.openshift.io/version: "0.1"
    pipelines.appstudio.openshift.io/type: build
  creationTimestamp: null
  name: eltest-component-yubm
  namespace: build-e2e-hacbs-brub
spec:
  path: /
  port:
    targetPort: 8080
  to:
    kind: Service
    name: el-test-component-yubm
    weight: null
status: {}
